--- a/Clase_03/index.html
+++ b/Clase_03/index.html
@@ -20,7 +20,7 @@
         <input type="text" id="destino" placeholder="Destino">
         <input type="number" id="duracion" placeholder="Duración en días">
         <input type="text" id="pais" placeholder="País">
-        <button onclick="">Agregar viaje</button> <!-- Crear un viaje -->
+        <button onclick="crearViaje()">Agregar viaje</button> <!-- Crear un viaje -->
 
         <h2>Viajes registrados</h2>
         <div id="lista-viajes"></div>
@@ -29,7 +29,7 @@
     <div id="modal" class="modal-overlay">
         <div class="modal">
             <p id="modal-text"></p>
-            <button onclick="">Cerrar</button> <!-- Cerrar la modal -->
+            <button onclick="cerrarModal()">Cerrar</button> <!-- Cerrar la modal -->
         </div>
     </div>
 
@@ -38,8 +38,8 @@
             <p>Ingresa una nueva tarea para este viaje:</p>
             <input type="text" id="prompt-input">
             <div class="modal-buttons">
-                <button onclick="">Aceptar</button> <!-- Confirmar -->
-                <button onclick="" class="cancel">Cancelar</button> <!-- Cerrar -->
+                <button onclick="confirmarPrompt()">Aceptar</button> <!-- Confirmar -->
+                <button onclick="cerrarPrompt()" class="cancel">Cancelar</button> <!-- Cerrar -->
             </div>
         </div>
     </div>
